--- a/src/svelte/app.css
+++ b/src/svelte/app.css
@@ -1,25 +1,39 @@
 @font-face {
   font-family: 'Source Serif 4';
   src: url('/fonts/SourceSerif4.ttf') format('truetype');
-  font-weight: 1 999; /* Rango de pesos */
+  font-weight: 1 999;
+  /* Rango de pesos */
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Source Serif 4';
   src: url('/fonts/SourceSerif4-Italic.ttf') format('truetype');
-  font-weight: 1 999; /* Rango de pesos */
+  font-weight: 1 999;
+  /* Rango de pesos */
   font-style: italic;
 }
 
 body {
   font-family: 'Source Serif 4', sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: rgb(230, 218, 145);
+  background-image: radial-gradient(closest-side,
+      transparent 98%,
+      rgba(0, 0, 0, 0.3) 99%),
+    radial-gradient(closest-side, transparent 98%, rgba(0, 0, 0, 0.3) 99%);
+  background-size: 80px 80px;
+  background-position:
+    0 0,
+    40px 40px;
 }
 
 main {
   width: 100%;
   --metadata-label-width: 6em;
 }
+
 .note-view {
   min-width: 40em;
   max-width: 50em;
@@ -40,10 +54,12 @@ main {
     display: flex;
     gap: 1em;
     margin-bottom: .25em;
+
     .label {
       width: var(--metadata-label-width);
       font-weight: bold;
     }
+
     p {
       margin: 0;
       padding: 0;
@@ -52,14 +68,16 @@ main {
 }
 
 .block {
-  width: fit-content; 
+  width: fit-content;
   position: relative;
   padding: .25em;
   margin: 0;
   margin-left: -.25em;
+
   p {
     margin: 0;
   }
+
   .drag-handle {
     position: absolute;
     left: -2em;
