--- a/src/svelte/app.css
+++ b/src/svelte/app.css
@@ -18,15 +18,13 @@ body {
   font-family: 'Source Serif 4', sans-serif;
   padding: 0;
   margin: 0;
-  background-color: rgb(230, 218, 145);
-  background-image: radial-gradient(closest-side,
-      transparent 98%,
-      rgba(0, 0, 0, 0.3) 99%),
-    radial-gradient(closest-side, transparent 98%, rgba(0, 0, 0, 0.3) 99%);
-  background-size: 80px 80px;
-  background-position:
-    0 0,
-    40px 40px;
+  background-color: rgb(78, 144, 194);
+  background-image: linear-gradient(white 2px, transparent 2px),
+    linear-gradient(90deg, white 2px, transparent 2px),
+    linear-gradient(rgba(255, 255, 255, .3) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255, 255, 255, .3) 1px, transparent 1px);
+  background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+  background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 main {
