--- a/src/svelte/app.css
+++ b/src/svelte/app.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
-
-@config "../../tailwind.config.js";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@plugin "daisyui";
 
 @font-face {
   font-family: 'Roboto Flex';
