--- a/src/svelte/css/theme.css
+++ b/src/svelte/css/theme.css
@@ -14,6 +14,8 @@
   --color-base-400: oklch(88% 0 0);
 
   --color-base-content: oklch(0% 0 0);
+  --color-muted-content: oklch(30% 0 0);
+  --color-faint-content: oklch(50% 0 0);
 
   --color-error-bg: var(--color-rose-400);
   --color-error: var(--color-rose-800);
@@ -32,6 +34,8 @@
   --color-base-400: oklch(34% 0 0);
 
   --color-base-content: oklch(100% 0 0);
+  --color-muted-content: oklch(70% 0 0);
+  --color-faint-content: oklch(50% 0 0);
 
   --color-error-bg: var(--color-rose-800);
   --color-error: var(--color-rose-400);
