--- a/src/svelte/css/app.css
+++ b/src/svelte/css/app.css
@@ -82,11 +82,5 @@ input {
 :root {
   box-sizing: content-box;
   font-family: "Inter", "Source Sans 3", sans-serif;
-  font-feature-settings:
-    "ss03" 1,
-    "cv01" 1,
-    "cv02" 1,
-    "cv05" 1,
-    "cv06" 1,
-    "cv08" 1;
+  font-feature-settings: "cv01", "cv02", "cv05", "cv08";
 }
