--- a/src/svelte/css/theme.css
+++ b/src/svelte/css/theme.css
@@ -1,52 +1,65 @@
 :root {
-  --font-sans: "Source Sans 3";
-  --border-width: 2px;
-  --radius-selector: 0.66rem;
-  --radius-field: 0.5rem;
-  --radius-box: 1rem;
-  --spacing: 0.25rem; /* 4px */
+   --font-sans: "Source Sans 3";
+   --border-width: 2px;
+   --radius-selector: 0.66rem;
+   --radius-field: 0.5rem;
+   --radius-box: 1rem;
+   --spacing: 0.25rem; /* 4px */
+   --icon-sm: 1.0625rem;
+   --icon-md: 1.125rem;
+   --icon-lg: 1.5rem;
+}
+
+.icon-sm {
+   size: var(--icon-sm);
+}
+.icon-md {
+   size: var(--icon-md);
+}
+.icon-lg {
+   size: var(--icon-lg);
 }
 
 .theme-light {
-  --color-base-100: oklch(100% 0 0);
-  --color-base-200: oklch(96% 0 0);
-  --color-base-300: oklch(92% 0 0);
-  --color-base-400: oklch(88% 0 0);
+   --color-base-100: oklch(100% 0 0);
+   --color-base-200: oklch(96% 0 0);
+   --color-base-300: oklch(92% 0 0);
+   --color-base-400: oklch(88% 0 0);
 
-  --color-base-content: oklch(0% 0 0);
-  --color-muted-content: oklch(30% 0 0);
-  --color-faint-content: oklch(50% 0 0);
+   --color-base-content: oklch(0% 0 0);
+   --color-muted-content: oklch(30% 0 0);
+   --color-faint-content: oklch(50% 0 0);
 
-  --color-error-bg: var(--color-rose-400);
-  --color-error: var(--color-rose-800);
+   --color-error-bg: var(--color-rose-400);
+   --color-error: var(--color-rose-800);
 
-  --color-accent-indicator: oklch(69.56% 0.1271 253.81 / 50%);
+   --color-accent-indicator: oklch(69.56% 0.1271 253.81 / 50%);
 
-  --color-border-normal: var(--color-base-300);
-  --color-border-muted: var(--color-base-200);
+   --color-border-normal: var(--color-base-300);
+   --color-border-muted: var(--color-base-200);
 
-  --color-bg-hover: #00000010;
-  --color-bg-active: #00000016;
+   --color-bg-hover: #00000010;
+   --color-bg-active: #00000016;
 }
 
 .theme-dark {
-  --color-base-100: oklch(22% 0 0);
-  --color-base-200: oklch(26% 0 0);
-  --color-base-300: oklch(30% 0 0);
-  --color-base-400: oklch(34% 0 0);
+   --color-base-100: oklch(24% 0 0);
+   --color-base-200: oklch(29% 0 0);
+   --color-base-300: oklch(34% 0 0);
+   --color-base-400: oklch(39% 0 0);
 
-  --color-base-content: oklch(100% 0 0);
-  --color-muted-content: oklch(70% 0 0);
-  --color-faint-content: oklch(50% 0 0);
+   --color-base-content: oklch(100% 0 0);
+   --color-muted-content: oklch(70% 0 0);
+   --color-faint-content: oklch(50% 0 0);
 
-  --color-error-bg: var(--color-rose-800);
-  --color-error: var(--color-rose-400);
+   --color-error-bg: var(--color-rose-800);
+   --color-error: var(--color-rose-400);
 
-  --color-accent-indicator: oklch(55.82% 0.1762 256.43 / 50%);
+   --color-accent-indicator: oklch(55.82% 0.1762 256.43 / 50%);
 
-  --color-border-normal: var(--color-base-300);
-  --color-border-muted: var(--color-base-200);
+   --color-border-normal: var(--color-base-300);
+   --color-border-muted: var(--color-base-200);
 
-  --color-bg-hover: #ffffff10;
-  --color-bg-active: #ffffff16;
+   --color-bg-hover: #ffffff10;
+   --color-bg-active: #ffffff16;
 }
