--- a/src/svelte/css/theme.css
+++ b/src/svelte/css/theme.css
@@ -33,7 +33,8 @@
    --color-error-bg: var(--color-rose-400);
    --color-error: var(--color-rose-800);
 
-   --color-accent-indicator: oklch(69.56% 0.1271 253.81 / 50%);
+   --color-bg-accent-hover: oklch(69.56% 0.1271 253.81 / 50%);
+   --color-bg-accent-focus: oklch(69.56% 0.1271 253.81 / 70%);
 
    --color-border-normal: var(--color-base-300);
    --color-border-muted: var(--color-base-200);
@@ -56,7 +57,8 @@
    --color-error-bg: var(--color-rose-800);
    --color-error: var(--color-rose-400);
 
-   --color-accent-indicator: oklch(55.82% 0.1762 256.43 / 50%);
+   --color-bg-accent-hover: oklch(55.82% 0.1762 256.43 / 50%);
+   --color-bg-accent-focus: oklch(55.82% 0.1762 256.43 / 70%);
 
    --color-border-normal: var(--color-base-300);
    --color-border-muted: var(--color-base-200);
